--- a/moviez/Gemfile
+++ b/moviez/Gemfile
@@ -5,8 +5,8 @@ gem 'rails', '3.2.13'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
 
+gem 'pg', :group => :production
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -53,6 +53,7 @@ group :development, :test do
                             # https://github.com/banister/binding_of_caller
   gem 'meta_request'        # Supporting gem for Rails Panel (Google Chrome extension for Rails development).
                             # https://github.com/dejan/rails_panel/tree/master/meta_request
+  gem 'sqlite3'
 end
 
 gem 'imdb'
